--- a/app/src/Components/Bubbles/Bubbles.css
+++ b/app/src/Components/Bubbles/Bubbles.css
@@ -20,7 +20,8 @@ span {
   padding: 0 5px;
   color: white;
 }
-.Scoreboard {
+
+.scoreboard {
   position: absolute;
   top: 50px;
   left: 100px;
@@ -29,9 +30,16 @@ span {
   flex-direction: column;
   width: 200px;
   z-index: 88888;
-  background: rgba(0, 0, 0, 0.4);
   /* box-shadow: 0 0 5px black; */
 }
+
+.scoreboard > h3, .scoreboard > p {
+  margin: 0;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.4);
+  color: white;
+}
+
 .redBubble {
   height: 100%;
   background-color: red;
